Kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: ingress-nginx
  labels:
    app: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-web
        image: public.ecr.aws/t0o2r4y2/flask-webapp:latest
        ports:
        - containerPort: 5002
---

apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: ingress-nginx
spec:
  selector:
    app: flask
  ports:
  - port: 80
    targetPort: 5002
    protocol: TCP
  type: ClusterIP
