Kubernates/statfulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: ingress-nginx
  labels:
    app: db
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: web
  type: ClusterIP
  selector:
    app: mysql-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-st
  namespace: ingress-nginx
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: mysql-db-c
        image: public.ecr.aws/t0o2r4y2/flask-webapp:latest
        ports:
        - containerPort: 3306
          name: web
        volumeMounts:
        - name: mysql-data
          mountPath: /tmp/data
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: [ "ReadWriteMany" ]
        storageClassName: ""
        resources:
          requests:
            storage: 50Mi
